deployment/stacks/application/overlays/dev/template/uec-dos-api-cs-service-elb-customisation.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: uec-dos-api-cs-proxy
  namespace: K8S_APP_NAMESPACE_TO_REPLACE
  annotations:
    alb.ingress.kubernetes.io/waf-acl-id: dfae6ec3-aa05-428f-a022-5fd85f646009
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-west-2:730319765130:certificate/c0718115-4e22-4f48-a4aa-8c16ea86c5e6
    #service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled: "true"
    alb.ingress.kubernetes.io/inbound-cidrs: 194.101.83.23/24, 51.140.225.142/24, 81.155.242.0/24, 82.28.50.244/32 # DS
